<?xml version="1.0" encoding="ISO-8859-1"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.geotools</groupId>
		<artifactId>geotools</artifactId>
		<version>24-SNAPSHOT</version>
	</parent>

	<groupId>org.geotools.fx</groupId>
	<artifactId>gt-fx-parent</artifactId>
	<packaging>pom</packaging>
	<name>GeoTools JavaFX Components</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>14</maven.compiler.source>
		<maven.compiler.target>14</maven.compiler.target>
		<java.version>14</java.version>
		<javafx.version>14.0.1</javafx.version>
		<lombok.version>1.18.12</lombok.version>
		<guava.version>29.0-jre</guava.version>
		<jts.version>1.16.1</jts.version>
		<mapstruct.version>1.3.1.Final</mapstruct.version>
		<fxgraphics2d.version>2.0</fxgraphics2d.version>
		<controlsfx.version>11.0.1</controlsfx.version>
		<org.openjfx.javafx-maven-plugin.version>0.0.4</org.openjfx.javafx-maven-plugin.version>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
	</properties>

	<modules>
		<module>core</module>
		<module>data</module>
		<module>demo</module>
	</modules>

	<repositories>
		<repository>
			<!-- revisit? this is where testfx-junit-4.0.16-alpha is -->
			<id>jcenter.bintray.com</id>
			<name>JCenter</name>
			<url>https://jcenter.bintray.com</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>osgeo</id>
			<name>OSGeo Nexus Release Repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
			<!-- contains release (including third-party-dependences) -->
			<!-- ucar (https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases) -->
			<!-- geosolutions (http://maven.geo-solutions.it/) -->
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
		<repository>
			<id>osgeo-snapshot</id>
			<name>OSGeo Nexus Snapshot Repository</name>
			<url>https://repo.osgeo.org/repository/snapshot/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
		<repository>
			<id>sonatype-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency><!-- required until(if) lombok splits its mapstruct dependency 
					to a separate jar -->
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct-processor</artifactId>
				<version>${mapstruct.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.geotools.fx</groupId>
				<artifactId>gt-fx-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<!-- org.openjfx dependencies -->
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-base</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-graphics</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-fxml</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-graphics</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-swing</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-media</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<!-- 3rd party JavaFX dependencies -->
			<dependency>
				<groupId>org.jfree</groupId>
				<artifactId>org.jfree.fxgraphics2d</artifactId>
				<version>${fxgraphics2d.version}</version>
			</dependency>
			<dependency>
				<groupId>org.controlsfx</groupId>
				<artifactId>controlsfx</artifactId>
				<version>${controlsfx.version}</version>
			</dependency>

			<!-- GeoTools dependencies -->
			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-metadata</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-main</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-epsg-hsql</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-shapefile</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-property</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-geopkg</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.geotools.jdbc</groupId>
				<artifactId>gt-jdbc-postgis</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.geotools.jdbc</groupId>
				<artifactId>gt-jdbc-oracle</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-arcsde</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-mongodb</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- test dependencies -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13-beta-3</version>
			</dependency>
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-core</artifactId>
				<version>4.0.16-alpha</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-junit</artifactId>
				<version>4.0.16-alpha</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>3.1.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>4.0.1</version>
				<scope>test</scope>
			</dependency>
			<!-- Additional test dependencies -->
			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-sample-data</artifactId>
				<version>${project.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- dependencies common to all modules -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<!-- Test dependencies common to all modules -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-maven-plugin</artifactId>
					<version>${org.openjfx.javafx-maven-plugin.version}</version>
					<inherited>true</inherited>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
						<release>${java.version}</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.22.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>${java.version}</release>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<debug>true</debug>
					<encoding>UTF-8</encoding>
					<compilerArgs>
					</compilerArgs>
					<fork>true</fork>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.6.1</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
